secretaffiliateweapon.com (archived on 2008-02-24)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 2729,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 8.87,
  "homepage_snapshot_redirected_domain": "secretaffiliateweapon.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080305060635id_/http://www.secretaffiliateweapon.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080305060635id_/http%3A//secretaffiliateweapon.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "secretaffiliateweapon.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080224044313id_/http%3A//www.secretaffiliateweapon.com/privacy.htm",
  "policy_title": "Privacy",
  "policy_url": "secretaffiliateweapon.com/privacy.htm",
  "sha1": "291f4007bf40aa9946c0c2d0fe1d65550d376682",
  "simhash": 7589430169423203004,
  "simhash_updated": false,
  "site_hostname": "secretaffiliateweapon.com",
  "site_url": "http://secretaffiliateweapon.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20080224044313",
  "word_count": 455,
  "year": 2008
}

--- a/s/se/sec/secretaffiliateweapon.com.html
+++ b/s/se/sec/secretaffiliateweapon.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the secretaffiliateweapon.com privacy policy that was archived on 2007-10-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071014003026id_/http%3A//www.secretaffiliateweapon.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the secretaffiliateweapon.com privacy policy that was archived on 2008-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080224044313id_/http%3A//www.secretaffiliateweapon.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -99,8 +99,7 @@
   			Legal Disclaimer</a> |
   <a href="http://www.secretaffiliateweapon.com/privacy.htm">
   			Privacy Policy</a> | 
-  <a target="_blank" href="http://www.HeroDesk.com/helpdesk">
-  			Help Desk</a></font></div>
+  			<a target="_blank" href="http://www.EwenChiaHelpdesk.com">Help Desk</a></font></div>
       <p align="center">
 		<img border="0" src="footer.jpg" width="720" height="80"></p></td>
     </tr>
