quechup.com (archived on 2008-02-24)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 16483,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.99,
  "homepage_snapshot_redirected_domain": "quechup.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080517080359id_/http://quechup.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080517080359id_/http%3A//quechup.com",
  "interval": "2008_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "quechup.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080224105204id_/http%3A//quechup.com/privacy.php",
  "policy_title": "Quechup.com Privacy Policy",
  "policy_url": "quechup.com/privacy.php",
  "sha1": "33849ad4cb055fe6a1323c644fa0aad955809e05",
  "simhash": 6391943857782653786,
  "simhash_updated": false,
  "site_hostname": "quechup.com",
  "site_url": "http://quechup.com",
  "smog": 16.53,
  "strict_updated": false,
  "timestamp": "20080224105204",
  "word_count": 2573,
  "year": 2008
}

--- a/q/qu/que/quechup.com.html
+++ b/q/qu/que/quechup.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the quechup.com privacy policy that was archived on 2007-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071217091811id_/http%3A//www.quechup.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quechup.com privacy policy that was archived on 2008-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080224105204id_/http%3A//quechup.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<base href="http://quechup.com/">
+<base href="http://www.quechup.com/">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Expires" content="1 Jan 1970 00:00:00 GMT">
 <meta http-equiv="Expires" content="-1">
@@ -24,14 +24,11 @@
 -->
 </style>
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-<div id="oldb">
-Quechup social networking site requires a <a href="http://www.webstandards.org/upgrade/" title="Web Standards BROWSER UPGRADE initiative.">web standards browser</a> to use many of the features of our online friends network including: blogs, videos, photo albums, chat messenger.
-</div>
-
 <div id="mini-container">
+
 <h4>Quechup.com Privacy Policy</h4>
 This site is owned and operated by iDate Ltd. Your privacy on the Internet 
   is of the utmost importance to us. At iDate, we want to make your experience 
@@ -54,7 +51,8 @@ RG14 1JX,
 United Kindom.<br>
 <br>
 <h4> A Special Note About Children</h4>
-Children are not eligible to use our services, and we ask that minors (under the age of 18) do not submit any personal information to us.<br>
+Children are not eligible to use our services, and we ask that minors (under
+the age of 16) do not submit any personal information to us.<br>
 <br>
 <h4>Information Collection: </h4>
 Quechup.com gathers two types of information about users:<br>
