--- a/e/ea/ear/earnadegreenow.com.html
+++ b/e/ea/ear/earnadegreenow.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the earnadegreenow.com privacy policy that was archived on 2007-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071225231928id_/http%3A//www.earnadegreenow.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the earnadegreenow.com privacy policy that was archived on 2008-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080224184542id_/http%3A//www.earnadegreenow.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -55,16 +55,44 @@ a:active {
 }
 -->
 </style>
+<script type="text/JavaScript">
+<!--
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
+
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+//-->
+</script>
 </head>
 
 <body onload="MM_preloadImages('Images/signup_button.jpg')">
 <table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td colspan="3"><img height="60" src="Images/logo.jpg" width="778"></td>
+    <td colspan="3" align="left" valign="top"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,19,0" width="778" height="228">
+      <param name="movie" value="Images/banner.swf">
+      <param name="quality" value="high">
+      <embed src="Images/banner.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="778" height="228">
+    </object></td>
   </tr>
-  <tr>
-    <td colspan="3"><img height="182" src="Images/header.jpg" width="778"></td>
-  </tr>
+  
   <tr>
     <td colspan="3" background="Images/link.jpg"><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tbody><tr>
@@ -277,9 +305,7 @@ educational institutions, you will need to contact them separately.</p>
 
 <p class="MsoNormal"><o:p>&nbsp;</o:p></p>
 
-<p></p>
-                
-                </td>
+<p></p>                </td>
             </tr>
           </tbody></table>        </td>
           <td width="5">&nbsp;</td>
@@ -313,8 +339,7 @@ educational institutions, you will need to contact them separately.</p>
                             <option value="associate">Associate's</option>
                             <option value="bachelor">Bachelor's</option>
                             <option value="master">Master's</option>
-                </select></p>
-                    </td>
+                </select></p>                    </td>
                   </tr>
                   <tr>
                     <td height="8" align="middle" bgcolor="#fee6c9"></td>
