monsterauto.ca (archived on 2008-02-24)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;vehicles",
  "char_count": 9058,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 9.8,
  "homepage_snapshot_redirected_domain": "monsterauto.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080403045736id_/http://www.monsterauto.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080403045736id_/http%3A//monsterauto.ca",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "monsterauto.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080224190820id_/http%3A//www.monsterauto.ca/privacy.php",
  "policy_title": "MonsterAuto.ca: Privacy Policy",
  "policy_url": "monsterauto.ca/privacy.php",
  "sha1": "59551bcd0704192b9b2f7868ba9f262a1cedcd00",
  "simhash": 12229257579874640115,
  "simhash_updated": false,
  "site_hostname": "monsterauto.ca",
  "site_url": "http://monsterauto.ca",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20080224190820",
  "word_count": 1484,
  "year": 2008
}

--- a/m/mo/mon/monsterauto.ca.html
+++ b/m/mo/mon/monsterauto.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the monsterauto.ca privacy policy that was archived on 2007-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071225195018id_/http%3A//www.monsterauto.ca/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the monsterauto.ca privacy policy that was archived on 2008-02-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080224190820id_/http%3A//www.monsterauto.ca/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -78,7 +78,7 @@ function mmLoadMenus() {
   mm_menu_1226080002_0.addMenuItem("Car&nbsp;Proof&nbsp;Reports","location='http://www.monsterauto.ca/car_proof.php'");
   mm_menu_1226080002_0.addMenuItem("Insurance Quotes","location='http://www.monsterauto.ca/insurance_quotes.php'");
   mm_menu_1226080002_0.addMenuItem("Auto Shows","location='http://www.monsterauto.ca/auto_shows.php'");
-  mm_menu_1226080002_0.addMenuItem("Cool Links","location='http://www.monsterauto.ca/cool_links.php'");
+  mm_menu_1226080002_0.addMenuItem("Cool Stuff","location='http://www.monsterauto.ca/cool-stuff.php'");
    mm_menu_1226080002_0.fontWeight="bold";
    mm_menu_1226080002_0.hideOnMouseOut=true;
    mm_menu_1226080002_0.bgColor='#FFFFFF';
@@ -141,7 +141,7 @@ window.mm_menu_1227064841_0 = new Menu("root",81,17,"Tahoma",11,"#FFFFFF","#FFFF
   mm_menu_1227065033_0.addMenuItem("Car&nbsp;Proof&nbsp;Reports","location='http://www.monsterauto.ca/car_proof.php'");
   mm_menu_1227065033_0.addMenuItem("Insurance Quotes","location='http://www.monsterauto.ca/insurance_quotes.php'");
   mm_menu_1227065033_0.addMenuItem("Auto Shows","location='http://www.monsterauto.ca/auto_shows.php'");
-  mm_menu_1227065033_0.addMenuItem("Cool Links","location='http://www.monsterauto.ca/cool_links.php'");
+  mm_menu_1227065033_0.addMenuItem("Cool Stuff","location='http://www.monsterauto.ca/cool-stuff.php'");
    mm_menu_1227065033_0.fontWeight="bold";
    mm_menu_1227065033_0.hideOnMouseOut=true;
    mm_menu_1227065033_0.bgColor='#FFFFFF';
@@ -304,6 +304,7 @@ var sc_invisible=0;
 var sc_partition=27;
 var sc_security="250b8d2f";
 </script>
+<div id="divStartCountr" style="display:none">
 <script type="text/javascript" src="http://www.statcounter.com/counter/counter_xhtml.js"></script><noscript><div class="statcounter"><a class="statcounter" href="http://www.statcounter.com/"><img class="statcounter" src="http://c28.statcounter.com/3096309/0/250b8d2f/0/" alt="counter customizable free hit" /></a></div></noscript>
 <!-- End of StatCounter Code -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -312,7 +313,7 @@ var sc_security="250b8d2f";
 _uacct = "UA-1520889-1";
 urchinTracker();
 </script>
-
+</div>
 <table width="730" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
 
 <tbody><tr>
@@ -336,7 +337,7 @@ urchinTracker();
 				<table width="100%" border="0" cellpadding="0" cellspacing="0">
 					
 					<tbody><tr>
-						<td align="right" class="newtext"><strong>Tuesday, December 25, 2007</strong>&nbsp;&nbsp;</td>
+						<td align="right" class="newtext"><strong>Sunday, February 24, 2008</strong>&nbsp;&nbsp;</td>
 					</tr>
 				</tbody></table>
 			</td>
@@ -579,7 +580,7 @@ else
 	  <tr>
         <td align="center" class="style13"><span style="padding-left:0px; padding-top:7px">
 				<a href="http://www.monsterauto.ca/" target="_blank" class="style13_new">Monster Auto, Find a Car or Sell Your Vehicle on Canada's Best New and Used Car Classified Website</a><br>
-				Copyright © 2006-2007 MonsterAuto Inc.  All rights reserved.
+				Copyright © 2006-2008 MonsterAuto Inc.  All rights reserved.
 
 			</span>
 		</td>
@@ -588,8 +589,10 @@ else
   </tbody></table>
   </td>
  </tr>
+ 
 </tbody></table>
   
+
 
 
 <script>
