--- a/h/hi/hit/hitfarm.com.html
+++ b/h/hi/hit/hitfarm.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hitfarm.com privacy policy that was archived on 2007-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071226163842id_/http%3A//hitfarm.com/index.php%3Faction%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hitfarm.com privacy policy that was archived on 2008-02-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080225001315id_/http%3A//www.hitfarm.com/index.php%3Faction%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 	<title>Hitfarm.com</title>
