cartercenter.org (archived on 2008-02-25)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 4177,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.18,
  "homepage_snapshot_redirected_domain": "cartercenter.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080325065910id_/http://www.cartercenter.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080325065910id_/http%3A//cartercenter.org",
  "interval": "2008_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "cartercenter.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080225084741id_/http%3A//www.cartercenter.org/about/faqs/privacy.html",
  "policy_title": "The Carter Center: Frequently Asked Questions",
  "policy_url": "cartercenter.org/about/faqs/privacy.html",
  "sha1": "244d04a50ccc433517a6b0168d87d8de5cfd7bd1",
  "simhash": 6124029827283338647,
  "simhash_updated": false,
  "site_hostname": "cartercenter.org",
  "site_url": "http://cartercenter.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20080225084741",
  "word_count": 655,
  "year": 2008
}

--- a/c/ca/car/cartercenter.org.html
+++ b/c/ca/car/cartercenter.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cartercenter.org privacy policy that was archived on 2007-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071209115135id_/http%3A//www.cartercenter.org/about/faqs/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cartercenter.org privacy policy that was archived on 2008-02-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080225084741id_/http%3A//www.cartercenter.org/about/faqs/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>The Carter Center: Frequently Asked Questions</title>
@@ -18,14 +18,10 @@
 		<table cellpadding="0" cellspacing="0" border="0">
 		<tbody><tr>
 			<td id="levelTwoNav" width="737" valign="top">
-				<table cellspacing="0" cellpadding="0" border="0" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
+				<span id="tier2Nav"><table cellspacing="0" cellpadding="0" border="0" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
   <tbody><tr>
     <td width="737" colspan="2" valign="top">
-      <div class="logo">
-        <a href="/homepage.html">
-          <img src="/resources/images/cc_logo_sub.gif" width="737" height="79" alt="" border="0">
-        </a>
-      </div>
+      <div class="logo"><a href="/homepage.html"><img src="/resources/images/cc_logo_sub.gif" width="737" height="79" alt="" border="0"></a></div>
     </td>
   </tr>
   <tr>
@@ -37,91 +33,44 @@
     <td id="subLevelTwoNavTable" width="524" valign="top">
       <div class="subSecL2" style="text-align:top;">
         <ul>
-          <li>
-            <a href="/about/index.html" class="" target="">About the Center Overview</a>
-          </li>
-          <li>
-            <a href="/news/features/anniversary/index.html" class="" target="">Carter Center 25th Anniversary</a>
-          </li>
-          <li>
-            <a href="/about/history/chronology.html" class="" target="">Carter Center History</a>
-          </li>
-          <li>
-            <a href="/about/trustees/index.html" class="" target="">Carter Center Board of Trustees</a>
-          </li>
-          <li>
-            <a href="/about/councilors/index.html" class="" target="">Carter Center Board of Councilors</a>
-          </li>
+          <li><a href="/about/index.html" class="" target="">About the Center Overview</a></li>
+          <li><a href="/about/history/chronology.html" class="" target="">Carter Center History</a></li>
+          <li><a href="/about/trustees/index.html" class="" target="">Carter Center Board of Trustees</a></li>
+          <li><a href="/about/councilors/index.html" class="" target="">Carter Center Board of Councilors</a></li>
+          <li><a href="/about/faqs/index.html" class="topNavOn" target="">Carter Center FAQs</a></li>
         </ul>
         <ul>
-          <li>
-            <a href="/about/faqs/index.html" class="topNavOn" target="">Carter Center FAQs</a>
-          </li>
-          <li>
-            <a href="/news/publications/annual_reports.html" class="" target="">Annual Reports</a>
-          </li>
-          <li>
-            <a href="/about/facilities/index.html" class="" target="">Carter Center Facilities</a>
-          </li>
-          <li>
-            <a href="/about/carter_centre_uk/index.html" class="" target="">Carter Centre United Kingdom</a>
-          </li>
-          <li>
-            <a href="/involved/internship/index.html" class="" target="">Internship Program</a>
-          </li>
+          <li><a href="/news/publications/annual_reports.html" class="" target="">Annual Reports</a></li>
+          <li><a href="/about/facilities/index.html" class="" target="">Carter Center Facilities</a></li>
+          <li><a href="/about/carter_centre_uk/index.html" class="" target="">Carter Centre United Kingdom</a></li>
+          <li><a href="/involved/internship/index.html" class="" target="">Internship Program</a></li>
         </ul>
       </div>
     </td>
   </tr>
-</tbody></table>
+</tbody></table></span>
 			</td>
 			<td id="levelOneNavTable" width="225" valign="top">
 				<div class="subSecL1">
-					<ul xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
-  <li>
-    <a href="/homepage.html">Back to Home Page</a>
-  </li>
-  <li>
-    <a href="/donate/index.html" class="" target="">Donate Now</a>
-  </li>
-  <li>
-    <a href="/about/index.html" class="topNavOn" target="">About The Center</a>
-  </li>
-  <li>
-    <a href="/peace/index.html" class="" target="">Peace Programs</a>
-  </li>
-  <li>
-    <a href="/health/index.html" class="" target="">Health Programs</a>
-  </li>
-  <li>
-    <a href="/news/index.html" class="" target="">News &amp; Publications</a>
-  </li>
-  <li>
-    <a href="/involved/index.html" class="" target="">How To Get Involved</a>
-  </li>
-  <li>
-    <a href="/countries/index.html" class="" target="">At Work Around the World</a>
-  </li>
+					<span id="tier1Nav"><ul xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
+  <li><a href="/homepage.html">Back to Home Page</a></li>
+  <li><a href="/donate/index.html" class="" target="">Donate Now</a></li>
+  <li><a href="/about/index.html" class="topNavOn" target="">About The Center</a></li>
+  <li><a href="/peace/index.html" class="" target="">Peace Programs</a></li>
+  <li><a href="/health/index.html" class="" target="">Health Programs</a></li>
+  <li><a href="/news/index.html" class="" target="">News &amp; Publications</a></li>
+  <li><a href="/involved/index.html" class="" target="">How To Get Involved</a></li>
+  <li><a href="/countries/index.html" class="" target="">At Work Around the World</a></li>
 </ul>
 <div class="utilitySearch" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
   <table cellspacing="0" cellpadding="0" border="0" width="100%">
     <tbody><tr>
       <td align="left" valign="top" style="padding-left:20px;">
-        <form name="gs" method="GET" action="http://googlemini.cartercenter.org/search">
-          <input type="text" name="q" maxlength="256" value="Search Our Site" onmousedown="ClearSearchBox(this);">
-          <input type="image" name="btnG" src="/resources/images/searchGo.gif" alt="Go" style="height:14px; width:30px">
-          <input type="hidden" name="sort" value="date:D:L:d1">
-          <input type="hidden" name="output" value="xml_no_dtd">
-          <input type="hidden" name="oe" value="UTF-8">
-          <input type="hidden" name="ie" value="UTF-8">
-          <input type="hidden" name="client" value="default_frontend">
-          <input type="hidden" name="proxystylesheet" value="default_frontend">
-          <input type="hidden" name="site" value="default_collection">
-        </form>
+        <form name="gs" method="GET" action="http://googlemini.cartercenter.org/search"><input type="text" name="q" maxlength="256" value="Search Our Site" onmousedown="ClearSearchBox(this);"><input type="image" name="btnG" src="/resources/images/searchGo.gif" alt="Go" style="height:14px; width:30px" class="formNoBorder"><input type="hidden" name="sort" value="date:D:L:d1"><input type="hidden" name="output" value="xml_no_dtd"><input type="hidden" name="oe" value="UTF-8"><input type="hidden" name="ie" value="UTF-8"><input type="hidden" name="client" value="default_frontend"><input type="hidden" name="proxystylesheet" value="default_frontend"><input type="hidden" name="site" value="default_collection"></form>
       </td>
     </tr>
   </tbody></table>
-</div>
+</div></span>
 				</div>
 			</td>
 		</tr>
@@ -136,26 +85,21 @@
 	<td valign="top">
 		<img src="/resources/str/contentDivider.gif" width="962" height="15" alt="" border="0"><br>
 
-		<table cellspacing="0" cellpadding="0" border="0">
+		<span id="tier3Nav"></span><table cellspacing="0" cellpadding="0" border="0">
 		<!-- sub top ****************************** -->
 		<tbody><tr>
-			<td id="colAtop" width="213" align="left" valign="top" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
+		    <td id="colAtop" width="213" align="left" valign="top" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
   <div id="levelTwoHeading">
     <h2>Carter Center FAQs</h2>
   </div>
 </td>
 <td id="colBtop" width="524" align="left" valign="top" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:fn="http://www.w3.org/2005/xpath-functions" xmlns:xdt="http://www.w3.org/2005/xpath-datatypes">
-  <div id="subhdr_about">
+  <div id="
+                  subhdr_about">
     <ul id="colBtopnav">
-      <li>
-        <a href="/about/faqs/index.html" class="" target="">Carter Center FAQ Overview</a>
-      </li>
-      <li>
-        <a href="/about/faqs/directions.html" class="" target="">Directions to The Carter Center</a>
-      </li>
-      <li>
-        <a href="/about/faqs/privacy.html" class="topNavOn" target="">Web Site Privacy Policy</a>
-      </li>
+      <li><a href="/about/faqs/index.html" class="" target="">Carter Center FAQ Overview</a></li>
+      <li><a href="/about/faqs/directions.html" class="" target="">Directions to The Carter Center</a></li>
+      <li><a href="/about/faqs/privacy.html" class="topNavOn" target="">Web Site Privacy Policy</a></li>
     </ul>
   </div>
 </td>
@@ -183,7 +127,7 @@
 					<div class="colCPad">
 						<div style="display:none;"><span class="colCHeading">The Latest News</span><br><span class="colCcopy">27 September 2006<br>Chief Tahanaa:  Removing the Scar of Guinea Worm Disease, One Village at a Time.<br><a class="colCcopy" href="/news/documents/features/chief_tahanaa.html"><b><u>Read more &gt;&gt;</u></b></a></span><br><br><a class="colCcopy" href="/news/index.html"><b><u>Other news &gt;&gt;</u></b><br></a></div><a class="colCcopy" href="/news/index.html">
 						
-<span class="colCHeading">The Latest News</span><br><span class="colCcopy">26 November 2007<br></span></a><a class="colCcopy" href="http://www.cartercenter.org/donate/partners/index.html" target="_blank">Featured Partner -Elfenworks Foundation Issues Challenge Grant for Rosalynn Carter Mental Health Journalism Fellowships, Supports Malaria Control.</a><br><br><a class="colCcopy" href="/news/index.html"><b>Other news &gt;&gt;</b><br></a>
+<span class="colCHeading">The Latest News</span><br><span class="colCcopy">21 February 2008<br></span></a><a class="colCcopy" href="http://www.cartercenter.org/news/pr/ati_webcasts_022108.html" target="_blank">Two Live Webcasts to Examine Freedom of Information, One Headlined by Former U.S. President Carter, Bolivia President Morales, and Mali President Amadou Toumani Toure.</a><br><br><a class="colCcopy" href="/news/index.html"><b>Other news &gt;&gt;</b><br></a>
 					</div>
 
 				</div>
@@ -204,7 +148,7 @@
 				<div id="colB">
 
 					<div align="right" class="printPad">
-						<a href="javascript:window.location.href = window.location.href + '?printerFriendly=true';" class="printLink"><img src="/resources/images/icon_print.gif" alt="" width="20" height="12" border="0">Print This Page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/SendToAFriend/ClientSpecificWorkflowSteps/FriendSignUp_MultiRecip.aspx" class="printLink"><img src="/resources/images/icon_mail.gif" alt="" width="20" height="12" border="0">E-mail This Page</a>
+						<a href="javascript:window.location.href = window.location.href + '?printerFriendly=true';" class="printLink"><img src="/resources/images/icon_print.gif" alt="" width="20" height="12" border="0">Print This Page</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/SendToAFriend/EmailSubmitForm.aspx?step=0&amp;URL=http://www.cartercenter.org/about/faqs/privacy.html" class="printLink"><img src="/resources/images/icon_mail.gif" alt="" width="20" height="12" border="0">E-mail This Page</a>
 					</div>
 
 					<div class="colBPad">
@@ -264,7 +208,7 @@
 	<a href="http://www.emory.edu" target="_blank">Emory University</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a href="http://www.jimmycarterlibrary.org" target="_blank">Jimmy Carter Library &amp; Museum</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 	<a href="/about/faqs/privacy.html" target="_top">Privacy Statement</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-	Copyright © 2007 The Carter Center. All Rights Reserved
+	Copyright © 2008 The Carter Center. All Rights Reserved
 </div>
 </div>
 	</td>
