--- a/i/in/ing/ingres.com.html
+++ b/i/in/ing/ingres.com.html
@@ -1,13 +1,16 @@
-<!--The following is the downloaded HTML source of the ingres.com privacy policy that was archived on 2007-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071227030852id_/http%3A//www.ingres.com/policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ingres.com privacy policy that was archived on 2008-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080226015217id_/http%3A//www.ingres.com/policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-	<title>Ingres Corporation ::   Ingres Corporation Privacy Policy
+	<title>Ingres:   Ingres Corporation Privacy Policy
 
 </title>
 	<meta name="keywords" content="">
 	<link rel="stylesheet" type="text/css" href="/css/reset-fonts-grids.css">
 	<link rel="stylesheet" type="text/css" href="/css/ingres-style.css">
+	<script src="/scripts/prototype.js" type="text/javascript"></script>
+	<script src="/scripts/scriptaculous.js" type="text/javascript"></script>
+	<script src="/scripts/effects.js" type="text/javascript"></script>
 	<script src="/scripts/dom.js" type="text/javascript"></script>
 		<script language="javascript">
 	function checkform (form) {
@@ -23,9 +26,21 @@
 
 <div id="container">
 	<div id="header"><a href="/index.php"><img src="/images/logo.gif" id="logo" alt=""></a>
-		<div id="search">
-		<form action="/search.php" method="post"><input name="search" type="text" size="20"> <input type="submit" value="Search"></form> <div align="right" style="margin-top:  3px"><a href="http://www.ingres.com/users/login.php?redirect=http://www.ingres.com/policy.php">Login</a> | <a href="http://www.ingres.com/users/register.php?redirect=http://www.ingres.com/policy.php">Register</a></div></div>
-		<div id="resources">Resources for: <a href="/customers.php">CUSTOMERS</a><a href="/partners.php">PARTNERS</a><a href="/press/press.php">PRESS</a></div>
+		<div id="search"><div id="backlay" style="display:none;"></div>
+		<form action="/search.php" method="post"><input name="search" type="text" size="20" value="SEARCH INGRES.COM" id="searchbox"> <input type="image" src="/images/btn-arrow-gr.gif" id="searchBoxSubmit"></form> </div>
+		<div id="int">Ingres International Sites</div>
+		
+		<div id="intContent" style="display:none;">
+			<div class="bg">
+				<div class="topCurve"><img src="/images/int-content-top.gif"></div>
+				<div class="sep"></div>
+					<a href="/int-anz.php">Australia &amp; New Zealand</a>
+					<a href="/int-emea.php">EMEA</a>
+					<a href="/int-jpn.php">Japan</a>
+			</div>
+			<div class="btmCurve"><img src="/images/int-content-btm.gif"></div>
+		</div>
+		<div id="resources">Resources for: <a href="/customers.php">CUSTOMERS</a><a href="/partners.php">PARTNERS</a> <span style="padding-left:10px;"> | </span> <a href="http://www.ingres.com/users/login.php?redirect=http://www.ingres.com/policy.php">Login</a> <a href="http://www.ingres.com/users/register.php?redirect=http://www.ingres.com/policy.php">Register</a></div>
 		<div id="nav">
 			<a href="/products.php">PRODUCTS</a><a href="/downloads.php">DOWNLOADS</a><a href="/support.php">SUPPORT</a>
 			<a href="/services.php">SERVICES</a><a href="http://community.ingres.com/" target="_blank">COMMUNITY</a>
@@ -114,7 +129,7 @@ This Privacy Policy is effective as of: August____, 2006
 			<li><a href="/policy.php">Privacy Policy</a></li>
 			<li><a href="/license.php">License</a></li>
 			<li><a href="/faq/faq.php">FAQs</a></li>
-			<li class="rights">© 2007 Ingres Corporation. All rights reserved.</li>
+			<li class="rights">© 2008 Ingres Corporation. All rights reserved.</li>
 		</ul>
 	</div>
 </div><!-- // CONTAINER -->
