--- a/t/tr/tra/trackitdown.net.html
+++ b/t/tr/tra/trackitdown.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the trackitdown.net privacy policy that was archived on 2007-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230040230id_/http%3A//www.trackitdown.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trackitdown.net privacy policy that was archived on 2008-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080227071111id_/http%3A//www.trackitdown.net/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Statement - Trackitdown.net</title>
@@ -22,6 +22,7 @@
 <script src="/javascript/scriptaculous/scriptaculous.js?load=effects,controls" type="text/javascript"></script>
 <script src="/javascript/FlashJavascriptGateway/JavaScriptFlashGateway.js" type="text/javascript"></script>
 <script src="/skins/v2/javascript/main_functions.js" type="text/javascript"></script>
+<script src="/javascript/control.rating.js" type="text/javascript"></script>
 <script language="JavaScript" src="http://www.trustlogo.com/trustlogo/javascript/trustlogo.js" type="text/javascript"></script>
 
 
@@ -29,7 +30,7 @@
 
 <body>
 <div id="container">
-	<div id="header">
+		<div id="header">
 		<!-- the header js is in a seperate file to fix the IE activate plugins problem -->
 				<script src="/skins/v2/javascript/embed_header.js" type="text/javascript"></script>
 			<noscript><a href="/"><img src="/skins/v2/images/misc/altHeader.gif" alt="Trackitdown.net - Time to burn" title="Go to the homepage" width="816" height="95" border="0" /></a><br /></noscript>
@@ -66,12 +67,10 @@
 		</div>
 
   </div>
-
-   		<div id="banner">
-		<script src="/skins/v2/javascript/embed_shine_on_banner.js" type="text/javascript"></script>
-		<noscript><a href="/shine-on-remix-competition"><img src="/skins/v2/images/misc/shine_on_banner_noscript.gif" alt="Remix the classic Shine On by Degrees of Motion!" title="Enter the Shine On remix competition" width="816" height="105" border="0" /></a><br /></noscript>
-	  	</div>
-	  
+		<div id="banner">
+	<iframe id="a059a8c8" name="a059a8c8" src="http://ads.trackitdown.net/openads/openads/www/delivery/afr.php?n=a059a8c8&amp;zoneid=1&amp;cb=INSERT_RANDOM_NUMBER_HERE" framespacing="0" frameborder="no" scrolling="no" width="816" height="105"><a href='http://ads.trackitdown.net/openads/openads/www/delivery/ck.php?n=a2624b0d&amp;cb=INSERT_RANDOM_NUMBER_HERE' target='_blank'><img src='http://ads.trackitdown.net/openads/openads/www/delivery/avw.php?zoneid=1&amp;cb=INSERT_RANDOM_NUMBER_HERE&amp;n=a2624b0d' border='0' alt='' /></a></iframe>
+<script type="text/javascript" src="http://ads.trackitdown.net/openads/openads/www/delivery/ag.php"></script></div>
+	
 	<div id="mainCols">
 
 		<div id="rightCol">
@@ -104,8 +103,6 @@
 		</p>
 		</form>
 	</div>
-
-	<a id="buy_gc" href="/gift_certificate.html">Buy a PayPal gift certificate</a>
 </div><img src="/skins/v2/images/layout/basket_summary_bg_bottom.gif" alt="" width="226" height="8" border="0"><br>
 
 			<img src="/skins/v2/images/layout/basket_summary_bg_top.gif" alt="" width="226" height="8" border="0" style="margin-top:10px;"><br>
@@ -113,22 +110,25 @@
 
 <h3><img src="/skins/v2/images/layout/your_order.gif" width="71" height="12" border="0" alt="Your order"></h3>
 <div id="currencies">
-			<img src="/skins/v2/images/layout/basket_summary_flag_UK_on.gif" alt="US" width="19" height="19" border="0" title="£ UK sterling">
 	
 
-			<a rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=USD" title="Change basket currency to US Dollars">
-		<img src="/skins/v2/images/layout/basket_summary_flag_US_off.gif" alt="US" width="19" height="19" border="0" title="$ US dollars" onmouseover="javascript:this.src = flag_us_on.src;" onmouseout="javascript:this.src = flag_us_off.src">
-		</a>
-	
+				<a class="on" id="gbp" rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=GBP" title="Change basket currency to UK Stirling">
+				GB
+				</a>
 
-			<a rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=EUR" title="Change basket currency to Euros">
-		<img src="/skins/v2/images/layout/basket_summary_flag_EU_off.gif" alt="EU" width="19" height="19" border="0" title="€ Euros" onmouseover="javascript:this.src = flag_eu_on.src;" onmouseout="javascript:this.src = flag_eu_off.src">
-		</a>
-	
-			<a rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=AUD" title="Change basket currency to Australian Dollars">
-		<img src="/skins/v2/images/layout/basket_summary_flag_AU_off.gif" alt="AU" width="19" height="19" border="0" title="$ Australian dollars" onmouseover="javascript:this.src = flag_au_on.src;" onmouseout="javascript:this.src = flag_au_off.src">
-		</a>
-	</div>
+				<a id="usd" rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=USD" title="Change basket currency to US Dollars">
+				US
+				</a>
+
+				<a id="eur" rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=EUR" title="Change basket currency to Euros">
+				EU
+				</a>
+
+				<a id="aud" rel="nofollow" href="?widgetFormHandler=widgetShoppingBasket&amp;widgetAction=setCurrency&amp;currency=AUD" title="Change basket currency to Australian Dollars">
+				AU
+				</a>
+
+</div>
 <p id="basketTotals">
 	items: 0<br>
 	total: £&nbsp;0.00
@@ -144,7 +144,7 @@
 							<script type="text/javascript" language="Javascript">
 									var defaultPlaylist = '/playlist/default_playlist';
 								</script>
-				<script src="/skins/v2/javascript/embed_mp3_player.js" type="text/javascript"></script><div id="mp3Player" style="position:relative; top:0; left:0; width:226px; height:480px; padding-top:10px;"><embed src="/skins/v2/flash/mp3_player.swf" quality="high" bgcolor="#e6e6e6" width="226" height="480" type="application/x-shockwave-flash" flashvars="lcId=1580353193750&amp;isPlayerScrolling=false&amp;defaultPlaylist=/playlist/default_playlist" pluginspage="https://web.archive.org/web/20071003202946/http://www.macromedia.com/go/getflashplayer"></div><style type="text/css"> .playNowLink{visibility:hidden;}</style>
+				<script src="/skins/v2/javascript/embed_mp3_player.js" type="text/javascript"></script><div id="mp3Player" style="position:relative; top:0; left:0; width:226px; height:480px; padding-top:10px;"><embed src="/skins/v2/flash/mp3_player.swf" quality="high" bgcolor="#e6e6e6" width="226" height="480" type="application/x-shockwave-flash" flashvars="lcId=1580353194190&amp;isPlayerScrolling=false&amp;defaultPlaylist=/playlist/default_playlist" pluginspage="https://web.archive.org/web/20071003202946/http://www.macromedia.com/go/getflashplayer"></div><style type="text/css"> .playNowLink{visibility:hidden;}</style>
 						<noscript>
 				<p style="font-size:0.9em; margin-top:20px;">Trackitdown.net makes use of Javascript and Macromedia Flash.
 				Although it is highly recomended to turn on Javascript and Flash, it is possible to use the site without them.
@@ -209,7 +209,7 @@ google_cpa_choice = "CAAQxcuTlwIaCNWdXh20M4MXKLPGvnU";
 google_ad_channel = "";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script></span>		© Copyright 2004 - 2007 Trackitdown.net 
+</script></span>		© Copyright 2004 - 2008 Trackitdown.net 
 		<span style="color:#aaa;"> - hosted by <a href="http://www.standingwave.co.uk/" style="color:#aaa;">Standingwave Ltd.</a></span>
 
 		</p>
