--- a/t/tr/tra/traffichoopla.com.html
+++ b/t/tr/tra/traffichoopla.com.html
@@ -1,174 +1,50 @@
-<!--The following is the downloaded HTML source of the traffichoopla.com privacy policy that was archived on 2007-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071215181505id_/http%3A//traffichoopla.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the traffichoopla.com privacy policy that was archived on 2008-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080227081642id_/http%3A//traffichoopla.com/policy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>Privacy Policy for TrafficHoopla.com</title>
-<meta name="keywords" content="web site traffic, free advertising, increase web site traffic, banner exchange, more web site traffic, traffic exchange, buy web site traffic, downline builder, traffic builder, web site traffic builder">
-<meta name="description" content="TrafficHoopla is a free traffic builder that helps anyone, with access to the Internet, to earn ongoing daily traffic. You can earn thousands of daily hits to any website">
-<meta name="abstract" content="TrafficHoopla is a free traffic builder that helps anyone, with access to the Internet, to earn ongoing daily traffic. You can earn thousands of daily hits to any website">
-<meta http-equiv="Content-Language" content="EN">
-<meta name="author" content="Team Hoopla!">
-<meta name="distribution" content="Global">
-<meta name="revisit-after" content="7 days">
-<meta name="copyright" content="TrafficHoopla.com">
-<meta name="robots" content="FOLLOW,INDEX">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<link href="style.css" rel="stylesheet" type="text/css">
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
-
-function MM_findObj(n, d) { //v4.01
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-  if(!x && d.getElementById) x=d.getElementById(n); return x;
-}
-
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-//-->
-</script>
+<html><head>
+<title>TrafficHoopla Privacy Policy</title>
+<style type="text/css">
+body,table,tr,td,p {font-family:verdana,arial,sans-serif; font-size:12px;}
+</style>
 </head>
+<body>
+<table width="100%">
+<tbody><tr><td width="10">&nbsp;</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td>
+<!-- Start P3P Privacy Policy-->
+<p><b>TrafficHoopla Privacy Policy</b></p>
+<p>This privacy policy applies to the website of TrafficHoopla.</p>
+<table width="600" cellspacing="0" cellpadding="3" border="0"><tbody><tr><td colspan="2">To contact our organization, use the following information.</td></tr>
+<tr><td width="20">&nbsp;</td><td width="580">traffichoopla@gmail.com<br>A LivingWizards Company<br>
+43055 Washington St. #3<br> Palm Desert, CA USA 92211</td></tr></tbody></table><br>
+<p>Because we want to demonstrate our commitment to our users’ privacy, 
+we disclose all of the information we collect, why we collect it, 
+and what we do with the it.</p>
 
-<body onload="MM_preloadImages('images/but_1_on.gif','images/but_2_on.gif','images/but_3_on.gif','images/but_4_on.gif','images/but_5_on.gif')">
-<table width="100%" border="0" cellspacing="0" cellpadding="0" style="height:100% ">
-  <tbody><tr>
-    <td width="50%" valign="top" style="background-image:url(images/bg_1.gif); background-position:right top ">&nbsp;</td>
-    <td valign="top" style="background-image:url(images/bg_1.gif) "><table width="766" border="0" align="center" cellpadding="0" cellspacing="0">
-      <tbody><tr>
-        <td valign="top" style="height:62; background-image:url(images/top_bg.gif); background-repeat:no-repeat "><img src="images/spacer.gif" width="1" height="1" alt=""></td>
-      </tr>
-      <tr>
-        <td valign="top" style="height:593 "><table width="766" border="0" cellspacing="0" cellpadding="0" style="height:100% ">
-            <tbody><tr>
-              <td width="97" valign="top" style="height:100%; background-image:url(images/left_2.gif) "><table width="97" border="0" cellspacing="0" cellpadding="0" style="height:100%; background-image:url(images/left_1.gif); background-repeat:no-repeat ">
-                  <tbody><tr>
-                    <td style="background-image:url(images/left_3.gif); background-position:bottom; background-repeat:no-repeat "><img src="images/spacer.gif" width="1" height="1" alt=""></td>
-                  </tr>
-              </tbody></table></td>
-              <td width="204" valign="top" bgcolor="FFFFFF" style="height:100% "><table width="204" border="0" cellspacing="0" cellpadding="0">
-                  <tbody><tr>
-                    <td valign="top" style="height:65 "><img src="images/logo2.jpg" width="203" height="65" alt=""></td>
-                  </tr>
-                  <tr>
-                    <td valign="middle" style="height:39; background-image:url(images/but_1_off.gif); padding-left:24px "><a href="hiw.html" class="copy"><b>How It Works</b></a></td>
-                  </tr>
-                  <tr>
-                    <td valign="middle" style="height:39; background-image:url(images/but_2_off.gif); padding-left:24px "><a href="join.html" class="copy"><b>Join Today - Free!</b></a></td>
-                  </tr>
-                  <tr>
-                    <td valign="middle" style="height:39; background-image:url(images/but_3_off.gif); padding-left:24px "><a href="http://hitshoopla.com" target="new" class="copy"><b>Buy HitsHoopla Traffic</b></a></td>
-                  </tr>
-                  <tr>
-                    <td valign="middle" style="height:39; background-image:url(images/but_4_off.gif); padding-left:24px "><a href="/cgi-bin/sp.cgi" onclick="this.href=ReferCheck(this.href)" class="copy"><b>Top Ranked Resources</b></a></td>
-                  </tr>
-                  <tr>
-                    <td valign="middle" style="height:39; background-image:url(images/but_5_off.gif); padding-left:24px "><a href="http://traffichoopla.com/ic/?w=th" target="new" class="copy"><b>Information Center</b></a></td>
-                  </tr>
-                  <tr>
-                    <td align="right" valign="top" style="height:334; background-image:url(images/bgs_5.gif); background-position:bottom; background-repeat:repeat-y "><table width="185" border="0" cellspacing="0" cellpadding="0">
+<table width="600" cellspacing="0" cellpadding="3" border="0"><tbody><tr><td colspan="2">Information is collected for the following purposes.</td></tr>
+<tr><td width="20">&nbsp;</td><td width="580">Completing an activity or transaction<br>Website and system administration<br>Research and Development</td></tr></tbody></table><br><br>
 
-                        <tbody><tr>
-                          <td valign="top" class="text_1" style="padding-top:30px; padding-right:5px"><strong>TrafficHoopla</strong> is a<br>LivingWizards Company owned by David Fotheringham and business partner, Bill Carr.  David lives in California USA and Bill lives in Texas USA.  We are very appreciative and attentive to your business. Your questions, comments, and/or concerns are always welcome.<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_1" style="padding-right:5px"><strong>Our work started</strong> back in 2002 with the very first Hit Exchange Report.  With a degree in mathematics and statistics, a teaching background and entrepreneur/sales experience, we then launched this traffic builder in early 2003.  Since then, we have literally helped thousands of people from around the world to increase and maximize their Internet traffic/advertising.  Today, we are most known for our weekly testing reports at <a href="http://testhoopla.com" target="new">TestHoopla</a> and our most popular product/service is our traffic packages at <a href="http://hitshoopla.com" target="new">HitsHoopla</a>.  <br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_1" style="padding-right:5px"><strong>We are not a money maker!</strong> Although several of our sites offer a free affiliate program that pays single level commissions, we are not about making money.  Your business... your website... your product... is your money maker.  We simply offer useful resources that can help you to increase and maximize your business.<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_1"><table width="90" border="0" cellspacing="0" cellpadding="0">
-                 
-                          </table></td>
-                        </tr>
-                    </tbody></table></td>
-                  </tr>
-              </tbody></table></td>
-              <td width="373" valign="top" bgcolor="FFFFFF" style="height:100% "><table width="373" border="0" cellspacing="0" cellpadding="0" style="height:100% ">
-                  <tbody><tr>
-                    <td valign="top" style="height:162; background-image:url(images/main.jpg) "><table width="373" border="0" cellspacing="0" cellpadding="0">
-                        <tbody><tr>
-                    <td align="right" valign="top" class="copy" style="height:67; background-image:url(images/copy_bg_1.gif); padding-right:8px "><br><a href="join.html" class="copy">Join Free</a> | <a href="login.shtml" class="copy">Login</a> | <a href="main.shtml" class="copy"> Home</a></td>
-                  </tr>
-                        <tr>
-                          <td valign="top"><img src="images/text_1.jpg" width="158" height="39" alt="" style="margin-left:190px "></td>
-                        </tr>
-                    </tbody></table></td>
-                  </tr>
-                  <tr>
-                    <td align="right" valign="top" style="height:100% "><table width="359" border="0" cellspacing="0" cellpadding="0" style="height:100% ">
-                        
-                        <tbody><tr>
-                          <td valign="top" class="text_2" style="padding-top:15px"><strong>TrafficHoopla.com - Privacy Policy</strong><br>
-                            Version: January 31, 2005<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>Information Collection and Use of Information</strong><br>
-                            In order to use this website, a user must first complete the registration form. During registration a user is required to give his contact information (name and email address). This information is used to contact the user about the service on our site for which he has expressed interest. We will not sell, share, or rent personal information to others. 
-		<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>Security</strong><br> 
-                            This website takes every precaution to protect our users personal information. When a user submits sensitive information via our site, his information is protected both online and off-line. Only the administrator of this site can access personal information of the users. 
-		<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>Correction/Updating Personal Information</strong><br> 
-                            If a user's personally identifiable information changes, we provide a way to correct that user's personal data provided to us. This can be done within the member area.<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>Right to Cancel</strong><br>
-                            Right to Cancel Our users can cancel membership by contacting our support. We will remove your email and other information when you cancel. You will not receive any contact after your cancellation.<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>How Information May Be Used</strong><br> 
-                            While actual use of any information collected may be used quite conservatively, you must assume that it is not. You must assume that information collected is shared with other persons or entities for commercial purposes. While this may or may not occur, you must assume that it is as you make your decision whether or not to view or interact with this website. This type of shared information may include your name, address, phone number, email address and buying habits, as well as other information. This information may be used for general commercial solicitation by this website or other persons it is sold to, rented to, or shared with.<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>Site and Service Updates</strong><br> 
-                            We may send the user site and service announcement updates. We communicate with the users to provide requested services and in regards to issues relating to their accounts via email.<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2" style="padding-right:5px"><strong>Notification of Changes</strong><br> 
-                            If we decide to change our Privacy Policy we will notify users by way of an email. Users will have a choice as to whether or not we use their information in this different manner. 
-		<br><br></td>
-                        </tr>
-                        <tr>
-                          <td valign="top" class="text_2"><a href="sc.html" class="text_2">Support Center</a><br><br></td>
-                        </tr>
-                    </tbody></table></td>
-                  </tr>
-                  <tr>
-                    <td align="right" class="copy" style="height:26; background-image:url(images/copy_bg_2.gif); padding-right:12px ">© 2005 | <a href="privacy.html" class="copy">Privacy</a> | <a href="antispam.html" class="copy">Anti-Spam</a> | <a href="corp.html" class="copy">Corporate</a></td>
-                  </tr>
-              </tbody></table></td>
-              <td width="92" valign="top" style="height:100%; background-image:url(images/right_2.gif) "><table width="92" border="0" cellspacing="0" cellpadding="0" style="height:100%; background-image:url(images/right_1.gif); background-repeat:no-repeat ">
-                  <tbody><tr>
-                    <td style="background-image:url(images/right_3.gif); background-position:bottom; background-repeat:no-repeat "><img src="images/spacer.gif" width="1" height="1" alt=""></td>
-                  </tr>
-              </tbody></table></td>
-            </tr>
-        </tbody></table></td>
-      </tr>
-      <tr>
-        <td valign="top" style="height:45; background-image:url(images/copy_bg.gif); background-repeat:no-repeat "><img src="images/spacer.gif" width="1" height="1" alt=""></td>
-      </tr>
-    </tbody></table></td>
-    <td width="50%" valign="top" style="background-image:url(images/bg_2.gif) ">&nbsp;</td>
-  </tr>
+<table width="600" cellspacing="0" cellpadding="3" border="0"><tbody><tr><td colspan="2">The following organizations have access to the information we collect.</td></tr>
+<tr><td width="20">&nbsp;</td><td width="580">Ourselves</td></tr></tbody></table><br><br>
+
+<p>If you are concerned about your personal information we collect, contact us using 
+the information contained in this policy.</p>
+<p>Our web site uses cookies to enhance how it operates and ensure we better serve our visitors.</p>
+<table width="600" cellspacing="0" cellpadding="3" border="0"><tbody><tr><td>Our servers automatically collect logs that may record statistical information such as visitors' IP addresses, type of operating systems, time of visit, web pages requested, etc., and identify categories of visitors by items such as domains and browser types. These usage statistics are are used to improve our websites and maintain site security.</td></tr></tbody></table><br><br>
+
+<table width="600" cellspacing="0" cellpadding="3" border="0"><tbody><tr><td colspan="2">The website collects the following types of information.</td></tr>
+<tr><td width="20">&nbsp;</td><td width="580">Web site issued unique identifiers<br>Purchase information<br>Current physical location information<br>Web Navigation information<br>Computer system information<br>Information about interactions with the web site</td></tr></tbody></table><br><br>
+
+<p>If you have a question about our privacy policy, or you would 
+like to dispute any information collected 
+contact us using the information contained in this policy.</p>
+
+<p style="display:none">Created by <a href="http://www.p3pbuilder.com">P3Pbuilder</a></p>
+
+<!-- End P3P Privacy Policy-->
+
+<p><a href="http://traffichoopla.com">Return to TrafficHoopla Main page</a></p>
+</td></tr>
 </tbody></table>
 
 
