--- a/m/ma/mar/marinabaysands.com.html
+++ b/m/ma/mar/marinabaysands.com.html
@@ -1,10 +1,14 @@
-<!--The following is the downloaded HTML source of the marinabaysands.com privacy policy that was archived on 2007-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229020212id_/http%3A//marinabaysands.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marinabaysands.com privacy policy that was archived on 2008-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080227203158id_/http%3A//www.marinabaysands.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><title>PRIVACY POLICY</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="assets/styles/style1.css" rel="stylesheet" type="text/css">
 <script src="assets/scripts/AC_RunActiveContent.js" type="text/javascript"></script>
+<!--WSS TRACKING SCRIPTS-->
+	<script src="assets/scripts/MBShbxpagecode.js" type="text/javascript"></script>
+	<script src="assets/scripts/MBSconfig.js" type="text/javascript"></script>
+	<script src="assets/scripts/MBShbx.js" type="text/javascript"></script>
 </head>
 <body>
 <!--IMAGE TEXT--><div id="imageText">
@@ -74,6 +78,7 @@ We reserve the right to modify or change this privacy policy at any time, simply
 <a href="mailto:privacy@venetian.com">privacy@venetian.com</a></li>
 </ul>
 </div></div>
+<div id="con"><a href="assets/pdf/CU0108.pdf" title="Construction Update" target="_blank">Construction Update</a></div>
 <!--END textRight--></div>
 <!--END contentBox--></div>
 <div id="clear"></div>
@@ -95,7 +100,8 @@ We reserve the right to modify or change this privacy policy at any time, simply
 </li><li><a href="careers.html">Careers</a>
 </li><li><a href="respgam.html">Responsible Gaming</a>
 </li><li><a href="contact.html">Contact Us</a></li></ul></div>
-<ul id="copyright"><li>©2007 Marina Bay Sands. All Rights Reserved.</li>
+<ul id="copyright">
+<li>©2008 Marina Bay Sands. All Rights Reserved.</li>
 <li class="footer-bdr"><a href="privacy.html">Privacy Policy</a></li>
 <li><a href="javascript:window.open('http://www.lasvegassands.com');void(0);">Corporate</a></li></ul>
 <div id="global">
