telivo.com (archived on 2008-02-28)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2422,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.63,
  "homepage_snapshot_redirected_domain": "telivo.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080402021339id_/http://www.telivo.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080402021339id_/http%3A//telivo.com",
  "interval": "2008_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "telivo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080228034457id_/http%3A//www.telivo.com/privacy_policy.html",
  "policy_title": "Privacy Policy - Domain names, web hosting & more",
  "policy_url": "telivo.com/privacy_policy.html",
  "sha1": "300b7536d343a3e72d24976601bc89933125fef2",
  "simhash": 6979346689367364773,
  "simhash_updated": false,
  "site_hostname": "telivo.com",
  "site_url": "http://telivo.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20080228034457",
  "word_count": 399,
  "year": 2008
}

--- a/t/te/tel/telivo.com.html
+++ b/t/te/tel/telivo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the telivo.com privacy policy that was archived on 2007-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071215063321id_/http%3A//www.telivo.com/privacy_policy.cgi) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the telivo.com privacy policy that was archived on 2008-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080228034457id_/http%3A//www.telivo.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>Privacy Policy - Domain names, web hosting &amp; more</title>
@@ -129,6 +129,19 @@
 <li><a href="/newsletter.html">Newsletter</a></li>
 </ul>
 </div>
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+  var pageTracker = _gat._getTracker("UA-3692032-1");
+  pageTracker._initData();
+  pageTracker._trackPageview();
+  
+</script>
+
 
 
 
