--- a/n/np/nps/nps.org.au.html
+++ b/n/np/nps/nps.org.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nps.org.au privacy policy that was archived on 2007-10-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071014073928id_/http%3A//nps.org.au/index.php%3Fname%3Dhtml/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nps.org.au privacy policy that was archived on 2008-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080228061726id_/http%3A//www.nps.org.au/index.php%3Fname%3Dhtml/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>National Prescribing Service Limited</title>
