ushomeauction.com (archived on 2008-02-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;realestate",
  "char_count": 8622,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.87,
  "homepage_snapshot_redirected_domain": "ushomeauction.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20080330093619id_/http://www.ushomeauction.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20080330093619id_/http%3A//ushomeauction.com",
  "interval": "2008_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ushomeauction.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20080229134638id_/http%3A//www.ushomeauction.com/privacy-policy.php",
  "policy_title": "Privacy Policy: REDC Real Estate Disposition Corporation",
  "policy_url": "ushomeauction.com/privacy-policy.php",
  "sha1": "c18ce0233458a5d249d770d93bfc5a2cc3fb625f",
  "simhash": 14303427629022668097,
  "simhash_updated": false,
  "site_hostname": "ushomeauction.com",
  "site_url": "http://ushomeauction.com",
  "smog": 16.69,
  "strict_updated": false,
  "timestamp": "20080229134638",
  "word_count": 1373,
  "year": 2008
}

--- a/u/us/ush/ushomeauction.com.html
+++ b/u/us/ush/ushomeauction.com.html
@@ -1,11 +1,14 @@
-<!--The following is the downloaded HTML source of the ushomeauction.com privacy policy that was archived on 2007-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071220022952id_/http%3A//www.ushomeauction.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ushomeauction.com privacy policy that was archived on 2008-02-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080229134638id_/http%3A//www.ushomeauction.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
-<title>Privacy Policy - REDC - Real Estate Disposition Corporation</title>
+<title>Privacy Policy: REDC Real Estate Disposition Corporation</title>
+<meta name="DESCRIPTION" content="Read USHomeAuction.com privacy policy before buying foreclosed home &amp; properties. Ushomeauction.com provides foreclosed properties &amp; home for sale.">
+
+<meta name="KEYWORDS" content="privacy policy, redc, real estate disposition corporation, buying foreclosed home, buying foreclosed properties, foreclosed properties, foreclosed home">
 
 <link href="css/main.css" rel="stylesheet" type="text/css">
 
@@ -379,7 +382,7 @@
 
 
 
-    <td class="sidelnksbg padlt8"><a href="https://www.ushomeauction.com/broker-registration.php"><img src="http://www.ushomeauction.com/images/brokers-corp.gif" alt="Broker Cooperation" width="132" height="24" border="0"></a></td>
+    <td class="sidelnksbg padlt8"><a href="https://www.ushomeauction.com/broker-registration.php"><img src="http://www.ushomeauction.com/images/brokers-corp.gif" alt="Broker Cooperation" width="180" height="24" border="0"></a></td>
 
 
 
@@ -502,115 +505,106 @@ taking place in:
   <tbody><tr height="5">
 
     <td></td>
-
   </tr>
 
   <form name="" method="post" action="http://redcmail.com/uha/box.php" class="greytxt2"></form>
 
     <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[1]" value="74">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[1]" value="74"> 
         Arizona</td>
 
       <td class="greytxt2"><input type="checkbox" name="nlbox[9]2" value="82">
-
         Nevada</td>
-
     </tr>
 
     <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[2]" value="25">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[2]" value="25"> 
         California</td>
 
       <td class="greytxt2"><input type="checkbox" name="nlbox[10]" value="91">
-
         New Hampshire</td>
-
     </tr>
 
     <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[3]" value="26">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[3]" value="26"> 
         Colorado</td>
 
       <td class="greytxt2"><input type="checkbox" name="nlbox[11]" value="94">
-
         New Jersey</td>
-
     </tr>
 
     <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[4]" value="90">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[4]" value="90"> 
         Connecticut</td>
 
       <td class="greytxt2"><input type="checkbox" name="nlbox[12]" value="93">
-
         New Mexico</td>
-
     </tr>
 
     <tr>
+      <td class="greytxt2"><input type="checkbox" name="nlbox[4]2" value="151"> 
+        DC</td>
+      <td class="greytxt2"><input type="checkbox" name="nlbox[13]" value="89">
+        New York</td>
+    </tr>
+    <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[16]" value="96">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[16]" value="96"> 
         Florida</td>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[13]" value="89">
-
-        New York</td>
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[13]2" value="159">
+North Carolina</td>
     </tr>
 
     <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[5]" value="27">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[5]" value="27"> 
         Georgia</td>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[14]" value="92">
-
-        Rhode Island</td>
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[14]2" value="135">
+        Oregon</td>
     </tr>
 
     <tr>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[6]" value="51">
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[6]" value="51"> 
         Illinois</td>
 
-      <td class="greytxt2"><input type="checkbox" name="nlbox[15]" value="73">
-
-        Texas</td>
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[14]" value="92">
+        Rhode Island</td>
     </tr>
 
     <tr>
 
+      <td class="greytxt2"><input type="checkbox" name="nlbox[6]2" value="149"> 
+        Maryland</td>
+
+      <td class="greytxt2"><input type="checkbox" name="nlbox[13]3" value="160">
+South Carolina</td>
+    </tr>
+
+    <tr>
       <td class="greytxt2"><input type="checkbox" name="nlbox[7]" value="70">
-
         Massachusetts</td>
-
-      <td class="greytxt2"><input type="checkbox" name="nlbox[17]" value="95">
-
-        Washington</td>
-
+      <td class="greytxt2"><input type="checkbox" name="nlbox[15]" value="73">
+        Texas</td>
     </tr>
-
     <tr>
+      <td class="greytxt2"><input type="checkbox" name="nlbox[8]2" value="147">
+        Michigan</td>
 
+      <td class="greytxt2"><input type="checkbox" name="nlbox[15]2" value="150">
+        Virginia</td>
+    </tr>
+    <tr>
       <td class="greytxt2"><input type="checkbox" name="nlbox[8]" value="52">
-
-        Minnesota</td>
-
-      <td class="greytxt2"></td>
-
+Minnesota</td>
+      <td class="greytxt2"><input type="checkbox" name="nlbox[17]" value="95">
+        Washington</td>
     </tr>
 
     <tr>
@@ -626,17 +620,13 @@ taking place in:
         <input name="p" type="hidden" id="p" value="6">
 
       </div></td>
-
     </tr>
-
   
 
   <tr height="5">
 
     <td></td>
-
   </tr>
-
 </tbody></table></td>
 
               </tr>
@@ -872,7 +862,15 @@ taking place in:
 
 
 
+
+
+
+
   <tbody><tr>
+
+
+
+
 
 
 
@@ -880,18 +878,37 @@ taking place in:
 
 
 
+
+
+
+
   </tr>
 
 
 
+
+
+
+
   <tr>
+
+
+
+
 
 
 
     <td height="30" align="left" class="brdrltrt whitetxt padlt10"><div align="center"><a href="http://www.ushomeauction.com/calendar.php" class="wtlinks-bld" title="Auction Calendar">Auction Calendar</a> | <a href="http://www.ushomeauction.com/faq.php" class="wtlinks-bld" title="Frequently Asked Questions">FAQs</a> | <a href="http://www.ushomeauction.com/howitworks.php" class="wtlinks-bld" title="How DOes The Auction Works">How Does The Auction Work</a> | <a href="http://www.ushomeauction.com/bidders-registration-form.php" class="wtlinks-bld" title="Register Here">Register Here</a> | <a href="http://www.ushomeauction.com/company-information.php" class="wtlinks-bld" title="Company Information">Company Information</a> | <a href="http://www.ushomeauction.com/financing-information.php" class="wtlinks-bld" title="Financing Information">Financing Information</a> | <a href="http://www.ushomeauction.com/broker-registration.php" class="wtlinks-bld" title="Broker Cooperation">Broker Cooperation</a><br>
+
         <a href="http://www.ushomeauction.com/privacy-policy.php" class="wtlinks-bld" title="Privacy Policy">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.ushomeauction.com/contact.php" class="wtlinks-bld" title="Contact Us">Contact Us</a>&nbsp;&nbsp;| <a href="http://www.ushomeauction.com/sitemap.php" class="wtlinks-bld">SiteMap</a> | <a href="http://www.ushomeauction.com/redclicensing.php" class="wtlinks-bld" title="Licese">Licenses and Disclosures</a>
+
         <!--|&nbsp;&nbsp;<a href="faq.php" class="wtlinks-bld" title="FAQ">FAQ</a> -->
+
     </div></td>
+
+
+
+
 
 
 
@@ -899,7 +916,15 @@ taking place in:
 
 
 
+
+
+
+
   <tr>
+
+
+
+
 
 
 
@@ -907,7 +932,15 @@ taking place in:
 
 
 
+
+
+
+
   </tr>
+
+
+
+
 
 
 
@@ -915,7 +948,15 @@ taking place in:
 
 
 
-    <td height="50" align="left" class="brdrltrt whitetxt padlt10">Copyright © 2006-2007 Real Estate Disposition Corporation. All Rights Reserved.<br>
+
+
+
+
+    <td height="50" align="left" class="brdrltrt whitetxt padlt10">Copyright © 2007-2008 Real Estate Disposition Corporation. All Rights Reserved.<br>
+
+
+
+
 
 
 
@@ -923,7 +964,15 @@ taking place in:
 
 
 
+
+
+
+
   </tr>
+
+
+
+
 
 
 
@@ -931,11 +980,23 @@ taking place in:
 
 
 
+
+
+
+
     <td height="40" align="left" bgcolor="#98A5B5" class="brdrltrt">&nbsp;</td>
 
 
 
+
+
+
+
   </tr>
+
+
+
+
 
 
 
@@ -947,15 +1008,35 @@ taking place in:
 
 
 
+
+
+
+
+
+
+
+
 <script type="text/javascript">
+
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+
 document.write("\<script src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'>\<\/script>" );
+
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+
 <script type="text/javascript">
+
 var pageTracker = _gat._getTracker("UA-217198-28");
+
 pageTracker._initData();
+
 pageTracker._trackPageview();
+
 </script>
+
+
+
+
 
 
 
